--- a/css/style.css
+++ b/css/style.css
@@ -29,50 +29,51 @@ body {
 
 }
 
-.card {
+.cards {
     display: flex;
     width: 980px;
     height: 446px;
 }
 
+.card {
+    padding: 60px;
+}
+
+
 .card__sedans {
     background: var(--primary-100);
-    padding: 60px;
     border-radius: 15px 0 0 15px;
 }
 
 .card__suvs {
     background: var(--primary-200);
-    padding: 60px;
 }
 
 .card__luxury {
     background: var(--primary-300);
-    padding: 60px;
     border-radius: 0 15px 15px 0;
 }
 
-h1 {
+.cards h1 {
     font-family: var(--font-family-big);
     text-transform: uppercase;
     font-size: 30px;
     color: var(--neutral-100);
-    line-height: 60px; 
-    margin: 30px 0 10px 0;  
+    line-height: 60px;
+    margin: 30px 0 10px 0;
 }
 
-p {
+.cards p {
     font-family: var(--font-family-lexend);
     font-size: 15px;
-    line-height: 25px; 
+    line-height: 25px;
     color: var(--neutral-200);
     margin-bottom: 40px;
 }
 
-button {
+.cards button {
     font-family: var(--font-family-lexend);
     font-size: 15px;
-
     text-align: center;
     background-color: var(--neutral-100);
     border: none;
@@ -101,5 +102,3 @@ button:hover {
     border: 1px solid var(--neutral-200);
     background-color: transparent
 }
-
-
